Fixed CSS problem with container element contents not showing in DnD placeholders after using the content editor. Conflicts: 	src-gwt/org/opencms/acacia/client/css/form.css

--- a/src-gwt/org/opencms/acacia/client/css/form.css
+++ b/src-gwt/org/opencms/acacia/client/css/form.css
@@ -515,15 +515,15 @@ div.helpBubble{
 	opacity: 0.8;
 }
 
-.dragPlaceholder > div *{
-	visibility:hidden !important;
+.formParent .dragPlaceholder > div * {
+	visibility: hidden !important;
 }
 
 .dragElement {
 	display: none;
 }
 
-.dragPlaceholder {
+.formParent .dragPlaceholder {
     opacity: 0.5;
 }
 
